PNP solving and sampling working smoothly

--- a/dev_sourcecode_physical_distribution.ipynb
+++ b/dev_sourcecode_physical_distribution.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "This seems to work reasonably well, but does not describe a physical system - units and the slope of the exponential are rather abitrary.\n",
     "\n",
-    "Now, to incorporate a precise physical description of the distribution, we describe the concentration of our ion species, $c_{Na^+}$, by the solution to the Poisson-Bolzmann equation:\n",
+    "Now, to incorporate a precise physical description of the distribution, we describe the concentration of our ion species, $c_{Na^+}$, by the solution to the Poisson-Boltzmann equation:\n",
     "\n",
     "$\n",
     "\\begin{align}\n",
@@ -80,7 +80,7 @@
     "* $z$: Distance from the double layer\n",
     "* $\\Psi(0)$: Potential at the surface\n",
     "* $\\Psi(z)$: Potential in the solution\n",
-    "* $k_B$: Bolzmann Constant\n",
+    "* $k_B$: Boltzmann Constant\n",
     "* $T$: Temperature [Kelvin]\n",
     "* $e$: Elemental Charge (or Euler's constant when exponentiated)\n",
     "* $\\gamma$: Term from Gouy-Chapmann theory\n",
