--- a/stern_layer.ipynb
+++ b/stern_layer.ipynb
@@ -11,7 +11,7 @@
     "The lubricant is somewhat solvable in water, thus parts of the film will diffuse into the bulk water.\n",
     "Lubricant molecules are charged, and their distribution is roughly exponential.\n",
     "\n",
-    "## The Poisson-Bolzmann distribution\n",
+    "## The Poisson-Boltzmann distribution\n",
     "\n",
     "As simplification, we  first create a solution of ions (Na+, purple; Cl-, green) in water (not shown).\n",
     "<img src=https://i.ibb.co/Yh8DxVM/showpicture.png width=\"500\">\n",
@@ -19,13 +19,13 @@
     "Close to the positively charged metallic surface, the electric potential (red) will be highest, falling off exponentially when further away.\n",
     "This potential attracts negatively charged Chlorine ions, and pushes positively charged Natrium ions away, resulting in a higher (lower) concentration of Clorine (Natrium) near the surface.\n",
     "\n",
-    "The Poission-Bolzmann approach fails for high potentials near the charged layer. Ions are predicted to be located abitrarily close to the surface, which is inconsistent with a finite ion radius.\n",
+    "The Poission-Boltzmann approach fails for high potentials near the charged layer. Ions are predicted to be located abitrarily close to the surface, which is inconsistent with a finite ion radius.\n",
     "This shortcoming is addressed by the Stern model.\n",
     "\n",
     "## The Stern Model\n",
     "<img src=https://upload.wikimedia.org/wikipedia/commons/f/f7/EDLC-Potentialdistribution.png width=\"500\">\n",
     "\n",
-    "Very close to the surface, a layer of ions is located. In this region, the potential decreases linerarly. In the rest of the liquid phase, the Poisson-Bolzmann solution holds.\n",
+    "Very close to the surface, a layer of ions is located. In this region, the potential decreases linerarly. In the rest of the liquid phase, the Poisson-Boltzmann solution holds.\n",
     "\n",
     "\n"
    ]
@@ -47,10 +47,10 @@
     "from IPython.display import Image\n",
     "\n",
     "# Physical distribution generation\n",
-    "from poisson_bolzmann_distribution import debye \n",
-    "from poisson_bolzmann_distribution import gamma\n",
-    "from poisson_bolzmann_distribution import charge_density\n",
-    "from poisson_bolzmann_distribution import potential\n",
+    "from poisson_boltzmann_distribution import debye \n",
+    "from poisson_boltzmann_distribution import gamma\n",
+    "from poisson_boltzmann_distribution import charge_density\n",
+    "from poisson_boltzmann_distribution import potential\n",
     "\n",
     "np.random.seed(74)"
    ]
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Poisson-Bolzmann equation:\n",
+    "The Poisson-Boltzmann equation:\n",
     "\n",
     "$\n",
     "\\begin{align}\n",
@@ -72,7 +72,7 @@
     "\\end{align}\n",
     "$\n",
     "\n",
-    "## Poisson-Bolzmann Charge density $\\rho(x)$"
+    "## Poisson-Boltzmann Charge density $\\rho(x)$"
    ]
   },
   {
